Bug 1781064 - Get buffer size directly from BufferTextureData. r=aosmond,gfx-reviewers

Since the BufferTextureData is getting created based on ImageDataSerialize::ComputeRGBBufferSize,
the stride may be padded for alignment which doesn't agree with the simple calculation duplicated
here. In general, it is less error-prone to just ask the BufferTextureData itself for its buffer
size, so just do that here instead rather than trying to make duplicate calculations with invalid
assumptions.

Differential Revision: https://phabricator.services.mozilla.com/D153868