gfx/layers/BufferTexture.h
@@ -76,6 +76,8 @@ class BufferTextureData : public TextureData {
 
   gfx::SurfaceFormat GetFormat() const;
 
+  virtual size_t GetBufferSize() = 0;
+
  protected:
   static BufferTextureData* Create(
       gfx::IntSize aSize, gfx::SurfaceFormat aFormat,
@@ -90,13 +92,12 @@ class BufferTextureData : public TextureData {
                                            TextureFlags aTextureFlags);
 
   virtual uint8_t* GetBuffer() = 0;
-  virtual size_t GetBufferSize() = 0;
 
   BufferTextureData(const BufferDescriptor& aDescriptor,
                     gfx::BackendType aMoz2DBackend)
       : mDescriptor(aDescriptor), mMoz2DBackend(aMoz2DBackend) {}
 
-  virtual ~BufferTextureData() = default;
+  ~BufferTextureData() override = default;
 
   BufferDescriptor mDescriptor;
   gfx::BackendType mMoz2DBackend;
